--- a/README.adoc
+++ b/README.adoc
@@ -117,3 +117,7 @@ Then on tomee you can set `rblog.backup.mail.sessionJndi` to `openejb:Resource/m
 - [feature] TomEE Embedded fat jar (`java -jar rblog.jar` or `java -jar rblog.war` or `java -jar tomee-embedded.jar --path rblog.war`)
 - [feature] TomEE distribution (pre-packaged rblog zip: `unzip rblog.zip && cd rblog-version && ./bin/startup.sh`) or openshift setup
 - ...
+
+== Build
+
+Don't forget to setup chrome and chromedriver and point chromedriver through the maven property `chrome.driver` (can be done in a activated by default profile in settings.xml): 
